--- a/Weitianshi/pages/message/beAddedContacts/beAddedContacts.wxml
+++ b/Weitianshi/pages/message/beAddedContacts/beAddedContacts.wxml
@@ -16,6 +16,80 @@
   <!-- bindscrolltolower="loadMore" -->
   <scroll-view scroll-y="true" scroll-top="{{scroll}}" bindscrolltolower='loadMore'>
     <view class="contacts">
+      <block wx:for="{{contacts}}" wx:key="{{contacts}}">
+        <view class='investorCard'>
+          <!-- <template is='InvestorCard' data='{{item}}'></template> -->
+          <view class="t-outsideBox" data-id="{{item.user_id}}" catchtap="userDetail">
+            <view class="t-applyMyProject t-contacts-detailm">
+              <view class="t-introduceBox flex">
+                <view class="t-userName">{{item.user_real_name}}</view>
+                <view class="t-userPosition">{{item.user_company_career}}</view>
+                <view class="t-userPart flex" wx:if="{{item.authentication[0].group_title}}">
+                  <image src="/img/icon-renzheng@2x.png" class="t-renzheng"></image>
+                  <view class="t-userPart1">{{item.authentication[0].group_title}}</view>
+                </view>
+                <view class="t-user_text" wx:if="{{item.investor_logo_text}}">{{item.investor_logo_text}}</view>
+                <image src="{{item.user_avatar_url}}" class="t-userPic" wx:if="{{item.user_avatar_url}}"></image>
+              </view>
+              <view class="t-userCompany">{{item.user_company_name}}</view>
+              <view class="t-record">{{item.active_status}}</view>
+              <view class="t-roundGroupPush flex" wx:if="{{item.user_invest_industry !=''}}">
+                <view class="t-roundGroupTitle">投资领域：</view>
+                <view class="t-roundGroupContent">
+                  <block wx:for="{{item.user_invest_industry}}" wx:key="{{industryItem.industry_id}}" wx:for-item='industryItem'>
+                    <label wx:if="{{index < item.user_invest_industry.length-1}}">
+                      {{industryItem.industry_name}}、
+                    </label>
+                    <label wx:if="{{index ==  item.user_invest_industry.length-1}}">
+                      {{industryItem.industry_name}}
+                    </label>
+                  </block>
+                </view>
+              </view>
+              <view class="t-roundGroupPush flex" wx:if="{{item.user_invest_stage.length != 0}}">
+                <view class="t-roundGroupTitle">投资轮次：</view>
+                <view class="t-roundGroupContent">
+                  <block wx:for="{{item.user_invest_stage}}" wx:key="{{stageItem.stage_id}}" wx:for-item='stageItem'>
+                    <label wx:if="{{index < item.user_invest_stage.length-1}}">{{stageItem.stage_name}}、</label>
+                    <label wx:if="{{index ==item.user_invest_stage.length-1}}">{{stageItem.stage_name}}</label>
+                  </block>
+                </view>
+              </view>
+            </view>
+          </view>
+          <!-- <template is='cardBottom1' data='{{item,user_id}}'></template> -->
+          <view class='t-cardBottom flex' wx:if='{{item.user_id!=user_id}}'>
+            <view class='t-cardBottomItem flex' data-id='{{item.user_id}}' bindtap='projectPush'>
+              <image class='t-itemPic' src='/img/icon-tuisongxiangmu@2x.png'></image>
+              <span>推送项目</span>
+            </view>
+            <!-- <view class='t-cardBottomItem flex'>
+      <image class='t-itemPic' src='/img/icon-tuisongxiangmu@2x.png'></image>
+      <span>已推送</span>
+    </view> -->
+            <view class="line"></view>
+            <view class='t-cardBottomItem flex' wx:if='{{item.follow_status==0}}' data-id='{{item.user_id}}' bindtap='contactsAdd'>
+              <image class='t-itemPic' src='/img/icon-jiarenmai@2x.png'></image>
+              <view>加人脉</view>
+            </view>
+            <view class='t-cardBottomItem flex' wx:if='{{item.follow_status==1}}'>
+              <image class='t-itemPic' src='/img/icon-huweirenmai@2x.png'></image>
+              <view style='color:#999;'>已为人脉</view>
+            </view>
+            <view class='t-cardBottomItem flex' wx:if='{{item.follow_status==2}}'>
+              <image class='t-itemPic' src='/img/icon-daiyanzheng@3x.png'></image>
+              <view style='color:#999;'>待验证</view>
+            </view>
+            <view class='t-cardBottomItem flex' wx:if='{{item.follow_status==3}}' data-id='{{item.user_id}}' bindtap='contactsAddDirect'>
+              <image class='t-itemPic' src='/img/icon-jiarenmai@2x.png'></image>
+              <view>加人脉</view>
+            </view>
+
+          </view>
+          <view class='t-cardBottom flex' wx:if='{{item.user_id==user_id}}'></view>
+        </view>
+      </block>
+      <!-- 
       <block wx:for="{{contacts}}" wx:key="{{item.user_id}}">
         <view class="card contacts-detailm" data-id="{{item.user_id}}" bindtap="userDetail">
           <view class="user_info flex">
@@ -32,47 +106,47 @@
               <view class="user_company" wx:if="{{item.user_company_name !=''}}">{{item.user_company_name}}</view>
             </view>
             <!--加人脉窗口-->
-            <view class="flex addNetwork">
+      <!-- <view class="flex addNetwork">
               <view class="refuse" wx:if="{{item.follow_status ==1}}">已为人脉</view>
               <view class="addPerson" wx:if="{{item.follow_status  == 3}}">
                 <view class="addPersonBtn add-contactsm" data-follow_status="{{item.follow_status}}" data-followedId="{{item.user_id}}" catchtap="addPerson">加人脉</view>
               </view>
             </view>
           </view>
-          <view class="investor_info">
+          <view class="investor_info"> -->
 
-            <!--投资领域-->
-            <view class="investor_industry_frame flex" wx:if="{{item.user_invest_industry !=''}}">
+      <!--投资领域-->
+      <!-- <view class="investor_industry_frame flex" wx:if="{{item.user_invest_industry !=''}}">
               <view class="investor_text">投资领域:</view>
               <view class="investor_right flex">
                 <block wx:for="{{item.user_invest_industry}}" wx:for-item="industry" wx:key="{{industry.industry_id}}">
                   <view class="industry" hidden="{{index>3}}">{{industry.industry_name}}</view>
                 </block>
               </view>
-            </view>
+            </view> -->
 
-            <!--投资轮次-->
-            <view class="investor_industry_frame flex" wx:if="{{item.user_invest_stage !=''}}">
+      <!--投资轮次-->
+      <!-- <view class="investor_industry_frame flex" wx:if="{{item.user_invest_stage !=''}}">
               <view class="investor_text">投资轮次:</view>
               <view class="investor_right flex">
                 <block wx:for="{{item.user_invest_stage}}" wx:for-item="stage" wx:key="{{stage.stage_id}}">
                   <view class="stage">{{stage.stage_name}}</view>
                 </block>
               </view>
-            </view>
+            </view> -->
 
-            <!--拥有资源-->
-            <view class="investor_industry_frame flex" wx:if="{{item.user_resource_find !=''}}">
+      <!--拥有资源-->
+      <!-- <view class="investor_industry_frame flex" wx:if="{{item.user_resource_find !=''}}">
               <view class="investor_text">寻求资源:</view>
               <view class="investor_right flex">
                 <block wx:for="{{item.user_resource_find}}" wx:for-item="res_find" wx:key="{{res_find.resource_id}}">
                   <view class="res_find">{{res_find.resource_name}}</view>
                 </block>
               </view>
-            </view>
+            </view> -->
 
-            <!--寻求资源-->
-            <view class="investor_industry_frame flex" wx:if="{{item.user_resource_give !=''}}">
+      <!--寻求资源-->
+      <!-- <view class="investor_industry_frame flex" wx:if="{{item.user_resource_give !=''}}">
               <view class="investor_text">拥有资源:</view>
               <view class="investor_right flex">
                 <block wx:for="{{item.user_resource_give}}" wx:for-item="res_give" wx:key="{{res_give.resource_id}}">
@@ -83,7 +157,8 @@
           </view>
           <view class="addTime" style="background:#f8f8f8;">{{item.created_at}}</view>
         </view>
-      </block>
+      </block> -->
+
     </view>
   </scroll-view>
 </view>
