--- a/Weitianshi/pages/message/viewProjectUser/viewProjectUser.wxss
+++ b/Weitianshi/pages/message/viewProjectUser/viewProjectUser.wxss
@@ -1,4 +1,5 @@
 /* pages/message/viewProjectUser/viewProjectUser.wxss */
+
 .browseMeTitle {
   /*height: 90rpx;*/
   margin: 32rpx 32rpx 32rpx 32rpx;
@@ -250,7 +251,7 @@ page {
 }
 
 .investor_text, investor_right {
-  padding: 0 12rpx 0  20rpx;
+  padding: 0 12rpx 0 20rpx;
 }
 
 /*资源需求*/
@@ -322,5 +323,17 @@ page {
   padding-right: 32rpx;
   padding-bottom: 20rpx;
   text-align: right;
-  color: #999999;
+  color: #999;
 }
+
+.t-cardBottom {
+  border-top: 2rpx solid #e6e6e6;
+  padding-top: 30rpx;
+  padding-bottom: 30rpx;
+  margin: 0;
+  font-size: 28rpx;
+  color: #40587a;
+  background: white;
+  margin-bottom:24rpx;
+}
+
