--- a/Weitianshi/pages/projectDetail/projectDetail.wxss
+++ b/Weitianshi/pages/projectDetail/projectDetail.wxss
@@ -411,7 +411,7 @@ scroll-view {
   line-height: 26rpx;
   text-align: left;
   margin-bottom: 34rpx;
-    margin-top: 24rpx;
+  margin-top: 24rpx;
 }
 
 .ProjectCluesLine {
@@ -499,44 +499,47 @@ scroll-view {
 .star {
   margin-bottom: 26rpx;
 }
-.goodTitle{
-   font-size: 28rpx;
+
+.goodTitle {
+  font-size: 28rpx;
   color: #333;
   /* line-height: 28rpx; */
   text-align: left;
   display: inline;
 }
- .goodTitle1{
+
+.goodTitle1 {
   text-align: left;
-   height: auto;
-   line-height: 50rpx;
+  height: auto;
+  line-height: 50rpx;
 }
- .brightUnfold{
-   height: 110rpx;
-  text-align: left;
-  /* margin-bottom: 20rpx; */
+
+.brightUnfold {
+  height: 550rpx;
+  text-align: left; /* margin-bottom: 20rpx; */
   overflow: hidden;
   text-overflow: -o-ellipsis-lastline;
   text-overflow: ellipsis;
   display: -webkit-box;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical; 
+  -webkit-line-clamp: 10;
+  -webkit-box-orient: vertical;
 }
-.brightUnfoldAfter{
-   height: auto;
+
+.brightUnfoldAfter {
+  height: auto;
   font-size: 26rpx;
   color: #666;
   line-height: 45rpx;
   text-align: left;
 }
- .brightContent {
-   display: inline;
+
+.brightContent {
+  display: inline;
   /* height: 72rpx; */
   font-size: 26rpx;
   color: #666;
   line-height: 50rpx;
   text-align: left;
-
 }
 
 .brightContentAfter {
@@ -1371,12 +1374,14 @@ button::after {
   border-radius: 35rpx 0 0 35rpx;
   padding-right: 28rpx;
 }
-.historyInvestTitle{
+
+.historyInvestTitle {
   font-size: 24rpx;
   color: #999;
-  margin:32rpx 0 24rpx 0;
+  margin: 32rpx 0 24rpx 0;
   text-align: left;
 }
-.investBox view{
+
+.investBox view {
   text-align: left;
 }
