--- a/Weitianshi/pages/discoverProject/discoverProject.wxml
+++ b/Weitianshi/pages/discoverProject/discoverProject.wxml
@@ -5,6 +5,11 @@
 </view>
 <!--筛选和搜索  -->
 <template is='search' data='{{SearchInit}}'></template>
+<view class='searchList'>
+  <block wx:for='{{}}}' wx:key='{{}}'>
+    <view></view>
+  </block>
+</view>
 <!--项目展示列表  -->
 <swiper current="{{currentTab}}" class="swiper-box" duration="300" style="height:865rpx" bindchange="bindChange">
   <!--模态层  -->
