--- a/Weitianshi/app.wxss
+++ b/Weitianshi/app.wxss
@@ -1,5 +1,7 @@
 /* @import "weui.wxss"; */
 @import '/utils/wxss/myContactsCard.wxss';
+@import '/utils/wxss/searchModel.wxss';
+@import '/utils/wxss/organization.wxss';
 
 scroll-view {
   height: 100%;
@@ -515,115 +517,6 @@ textarea {
   text-align: center;
   font-size: 32rpx;
   color: #fff;
-}
-
-/*-------------------------------------筛选和搜索框--------------------------------------*/
-
-.screen {
-  background: #fff;
-  width: 750rpx;
-  height: 80rpx;
-  font-size: 26rpx;
-  color: #666;
-  line-height: 80rpx;
-  text-align: center;
-  z-index: 999;
-}
-
-.withAnimate {
-  transition: all 600ms ease;
-  -webkit-transform: translate3d(0, 0, 0);
-  -moz-transform: translate3d(0, 0, 0);
-  -ms-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  -ms-backface-visibility: hidden;
-  backface-visibility: hidden;
-  -webkit-perspective: 1000;
-  -moz-perspective: 1000;
-  -ms-perspective: 1000;
-  perspective: 1000;
-}
-
-.tabIndex {
-  width: 25%;
-  vertical-align: center;
-}
-
-.tabIndex image {
-  width: 12rpx;
-  height: 6rpx;
-  padding-bottom: 6rpx;
-}
-
-.dropDown {
-  position: absolute;
-  top: 80rpx;
-  left: 0;
-  background: white;
-  z-index: 9999;
-  padding-bottom: 48rpx;
-}
-
-.dropTitle {
-  color: #333;
-  font-size: 28rpx;
-  font-family: PingFangSC-Regular;
-  text-align: left;
-  margin-left: 34rpx;
-}
-
-.dropFlex {
-  flex-wrap: wrap;
-}
-
-.checkbox {
-  width: 144rpx;
-  height: 56rpx;
-  line-height: 56rpx;
-  border: 1px solid #f0f0f0;
-  border-radius: 4rpx;
-  margin-left: 32rpx;
-  margin-bottom: 32rpx;
-  text-align: center;
-}
-
-.btnGroup button {
-  width: 322rpx;
-  height: 88rpx;
-  color: white;
-  background: #40587a;
-  border-radius: 4px;
-  border: 1px solid #40587a;
-  margin-left: 32rpx;
-}
-
-.btnGroup button:first-child {
-  background: white;
-  color: #40587a;
-  border: 1px solid #40587a;
-}
-
-.scale {
-  width: 208rpx;
-}
-
-.deepBlue {
-  color: #40587a;
-}
-
-.rotate {
-  transform: rotate(180deg);
-  transform-origin: 6rpx 3rpx;
-}
-
-.checkOne {
-  border: 1px solid #40587a;
-}
-
-.search_icon {
-  padding: 10rpx 30rpx;
 }
 
 /*---------------------------------模态框-----------------------------------*/
