--- a/Weitianshi/pages/discoverProject/discoverProject.wxml
+++ b/Weitianshi/pages/discoverProject/discoverProject.wxml
@@ -5,30 +5,32 @@
 </view>
 <!--筛选和搜索  -->
 <template is='search' data='{{SearchInit}}'></template>
-<view class='searchList flex'>
-  <view class='search_industry flex'>
-    <block wx:for='{{SearchInit.industry}}' wx:key='{{SearchInit.industry}}'>
-      <view hidden='{{item.check==false}}' data-id='{{item.industry_id}}'>
-      {{item.industry_name}}
-      <image style='width:20rpx;height:20rpx;' src='/img/icon-jujue@2x.png'></image>
-      </view>
-    </block>
-  </view>
-  <view class='search_stage flex'>
-    <block wx:for='{{SearchInit.stage}}' wx:key='{{SearchInit.stage}}'>
-      <view hidden='{{item.check==false}}'>{{item.stage_name}}</view>
-    </block>
-  </view>
-  <view class='search_scale flex'>
-    <block wx:for='{{SearchInit.scale}}' wx:key='{{SearchInit.scale}}'>
-      <view hidden='{{item.check==false}}'>{{item.scale_money}}</view>
-    </block>
-  </view>
-  <view class='search_hotCity flex'>
-    <block wx:for='{{SearchInit.hotCity}}' wx:key='{{SearchInit.hotCity}}'>
-      <view hidden='{{item.check==false}}'>{{item.area_title}}</view>
-    </block>
-  </view>
+<view id='searchModel2' class='searchList flex'>
+  <scroll-view class='scroll' scroll-x='true'>
+    <view class='search_industry flex'>
+      <block wx:for='{{SearchInit.industry}}' wx:key='{{SearchInit.industry}}'>
+        <view class='label' hidden='{{item.check==false}}' data-id='{{item.industry_id}}'>
+          {{item.industry_name}}
+          <image style='width:20rpx;height:20rpx;' src='/img/icon-jujue@2x.png'></image>
+        </view>
+      </block>
+    </view>
+    <view class='search_stage flex'>
+      <block wx:for='{{SearchInit.stage}}' wx:key='{{SearchInit.stage}}'>
+        <view hidden='{{item.check==false}}'>{{item.stage_name}}</view>
+      </block>
+    </view>
+    <view class='search_scale flex'>
+      <block wx:for='{{SearchInit.scale}}' wx:key='{{SearchInit.scale}}'>
+        <view hidden='{{item.check==false}}'>{{item.scale_money}}</view>
+      </block>
+    </view>
+    <view class='search_hotCity flex'>
+      <block wx:for='{{SearchInit.hotCity}}' wx:key='{{SearchInit.hotCity}}'>
+        <view hidden='{{item.check==false}}'>{{item.area_title}}</view>
+      </block>
+    </view>
+  </scroll-view>
 </view>
 <!--项目展示列表  -->
 <swiper current="{{currentTab}}" class="swiper-box" duration="300" style="height:865rpx" bindchange="bindChange">
@@ -76,7 +78,7 @@
 <template is='createProject'></template>
 <!--错误提示  -->
 <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
-<!--人脉王浮票  -->
+<!--人脉王浮标  -->
 <view class="competitor" bindtap="competitor">人脉王大赛</view>
 <!--电脑上传扫一扫  -->
 <view class="modalBox" hidden="{{modalBox==0}}">
