--- a/Weitianshi/pages/organization/subPage/list_investCase/list_investCase.wxss
+++ b/Weitianshi/pages/organization/subPage/list_investCase/list_investCase.wxss
@@ -1,1 +1,118 @@
-/* pages/organization/subPage/list_investCase/list_investCase.wxss */
+page {
+  height: 100%;
+  /* overflow: hidden; */
+}
+
+.media {
+  width: 100%;
+  height: auto;
+  background: #fff;
+}
+
+.inMedia {
+  /* padding: 42rpx 32rpx -2rpx 32rpx;  */
+  padding-top: 42rpx;
+  padding-left: 32rpx;
+  padding-right: 32rpx;
+}
+
+.mediaLine {
+  border-bottom: 1px solid #e6e6e6;
+}
+
+.investImg {
+  width: 100%;
+  height: 327.6rpx;
+  background: red;
+}
+
+.investLogo {
+  width: 20%;
+}
+
+.investLogo1 {
+  width: 121.68rpx;
+  height: 121.68rpx;
+  background: red;
+}
+
+.investRight {
+  width: 80%;
+  height: auto;
+}
+
+.investW {
+  flex-wrap: wrap;
+}
+
+.investName {
+  /* height: 37.44rpx; */
+  margin-bottom: 22rpx;
+}
+
+.investName1 {
+  font-size: 15px;
+  color: #333;
+}
+
+.investHot {
+  width: 70.2rpx;
+  height: 37.44rpx;
+  background: #fa855c;
+  border-radius: 2px;
+  font-size: 10px;
+  color: #fff;
+  text-align: center;
+  line-height: 37.44rpx;
+  margin-left: 18.72rpx;
+}
+
+.investWheel {
+  background: #009eff;
+  border-radius: 2px;
+  width: 114.66rpx;
+  height: 37.44rpx;
+  color: #fff;
+  font-size: 10px;
+  text-align: center;
+  line-height: 37.44rpx;
+  margin-left: 18.72rpx;
+}
+
+.investIndury {
+  font-size: 12px;
+  color: #666;
+  height:auto;
+  line-height: 38rpx;
+  overflow: hidden;
+  text-overflow: -o-ellipsis-lastline;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  margin-bottom: 24rpx;
+}
+.investOther{
+  font-size:12px;
+color:#666666;
+}
+.investLeft{
+  margin-right: 20rpx;
+}
+.investDetail{
+  padding: 18rpx;
+  margin-top: 20rpx;
+  font-size:12px;
+  color:#40587a;
+  height: auto;
+  /* max-height:75rpx;  */
+  line-height: 46rpx;
+   overflow: hidden;
+  text-overflow: -o-ellipsis-lastline;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  margin-bottom: 30rpx;
+ background:#fafafa;
+}
