--- a/Weitianshi/pages/organization/subPage/list_media/list_media.wxss
+++ b/Weitianshi/pages/organization/subPage/list_media/list_media.wxss
@@ -1,1 +1,49 @@
-/* pages/organization/subPage/list_media/list_media.wxss */
+page {
+  height: 100%;
+  /* overflow: hidden; */
+}
+.media {
+  width: 100%;
+  height: auto;
+  background: #fff;
+}
+
+.inMedia {
+   /* padding: 42rpx 32rpx -2rpx 32rpx;  */
+  padding-top:42rpx;
+  padding-left: 32rpx;
+  padding-right: 32rpx;
+}
+
+.mediaTime {
+  color: #fc703e;
+  font-size: 12px;
+  margin-bottom: 24rpx;
+}
+
+.mediaTitle {
+  font-size: 14px;
+  color: #333;
+  letter-spacing: 0;
+  line-height: 45rpx;
+  /* height: 88rpx; */
+  overflow: hidden;
+  text-overflow: -o-ellipsis-lastline;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  margin-bottom: 24rpx;
+}
+
+.mediaType {
+  font-size: 10px;
+  color: #999;
+  margin-bottom: 34rpx;
+}
+.mediaTypeRight{
+  margin-right: 10rpx;
+}
+.mediaLine{
+   border-bottom: 1px solid #e6e6e6;
+}
