--- a/Weitianshi/pages/discoverInvest/discoverInvest.wxss
+++ b/Weitianshi/pages/discoverInvest/discoverInvest.wxss
@@ -1,22 +1,26 @@
 /*tab切换页  */
 
 .swiper-tab {
-  width: 88%;
+  /* width: 88%; */
   line-height: 80rpx;
   background: #40587a;
   z-index: 999;
-  padding-left: 12%;
+  padding-left: 32rpx;
 }
 
 .swiper-tab-list {
   display: inline-block;
-  padding-left: 32rpx;
-  padding-right: 32rpx;
+  /* padding-left: 32rpx; */
+  margin-right: 58rpx;
   font-size: 30rpx;
   color: #999;
   line-height: 62rpx;
   text-align: center;
   border: none;
+}
+
+.swiper-tab-list:last-child {
+  margin-right: 0;
 }
 
 .on {
@@ -124,6 +128,7 @@
   height: 88rpx;
   width: 100%;
 }
+
 .searchNothing {
   font-size: 24rpx;
   color: #999;
@@ -136,14 +141,16 @@
 .searchLine {
   margin-bottom: 72rpx;
   height: 2rpx;
-  margin-left:32rpx;
+  margin-left: 32rpx;
   margin-right: 32rpx;
-  border-bottom:2rpx dashed #999;
+  border-bottom: 2rpx dashed #999;
   width: 90%;
 }
-.btnGroup{
-  height:50rpx;
+
+.btnGroup {
+  height: 50rpx;
 }
+
 .cardBottom {
   border-top: 2rpx solid #e6e6e6;
   padding-top: 30rpx;
@@ -152,5 +159,227 @@
   font-size: 28rpx;
   color: #40587a;
   background: white;
-  margin-bottom:24rpx;
+  margin-bottom: 24rpx;
+}
+
+/*tab==0  */
+
+.bigTitle {
+  height: 216px;
+  width: 100%;
+  background: yellow;
+}
+
+.searchSth {
+  background: #fff;
+  border: 1rpx solid rgba(64, 88, 122, 0.30);
+  border-radius: 4rpx;
+  width: 622rpx;
+  height: 76rpx;
+  margin-left: 62rpx;
+}
+
+.outStyleBox {
+  margin-bottom: 32rpx;
+  background: #fff;
+  padding: 32rpx;
+}
+
+/* 投资风格 */
+
+.blockTitle {
+  font-size: 30rpx;
+  color: #333;
+  line-height: 33rpx;
+  text-align: left;
+  margin-bottom: 16rpx;
+}
+
+.blockIntro {
+  font-size: 20rpx;
+  color: #999;
+  line-height: 22rpx;
+  text-align: left;
+  margin-bottom: 40rpx;
+}
+
+.investStyleBlock {
+  background: #fff;
+  box-shadow: 0 0 12rpx 0 rgba(64, 88, 122, 0.10);
+  border-radius: 8rpx;
+  width: 220rpx;
+  height: 152rpx;
+}
+
+.investStyleTitle {
+  font-size: 26rpx;
+  color: #333;
+  line-height: 26rpx;
+  padding-top: 44rpx;
+  padding-bottom: 16rpx;
+}
+
+.investStyleNum {
+  font-size: 22rpx;
+  color: #40587a;
+  line-height: 25rpx;
+}
+
+.swiper-box .outStyleBox view {
+  text-align: left;
+}
+
+.swiper-box .outStyleBox .investStyleBlock view {
+  text-align: center;
+}
+
+/*热门领域  */
+
+.industryTitleBlock {
+  font-size: 22rpx;
+  color: #999;
+  line-height: 22rpx;
+  text-align: left;
+}
+
+.industryTitle {
+  margin-right: 40rpx;
+  margin-bottom: 32rpx;
+}
+
+.industryTitle:first-child {
+  margin-right: 298rpx;
+}
+
+.industryTitle:last-child {
+  margin-right: 0;
+}
+
+.industryContentBlock {
+  font-size: 28rpx;
+  color: #333;
+  line-height: 30rpx;
+  text-align: left;
+  margin-bottom: 64rpx;
+}
+
+.industryContentBlock:last-child {
+  margin-bottom: 0;
+}
+
+.industryContentTitle {
+  width: 342rpx;
+}
+
+.industryContent {
+  width: 128rpx;
+}
+
+.industryContent:last-child {
+  width: 88rpx;
+}
+
+.allThing {
+  font-size: 24rpx;
+  color: #009eff;
+  line-height: 26rpx;
+  text-align: right;
+}
+
+.title {
+  justify-content: space-between;
+}
+
+/*投资机构  */
+
+.investGroupBlock {
+  padding-bottom: 40rpx;
+  padding-top: 40rpx;
+  border-bottom: 1rpx solid #e6e6e6;
+}
+
+.investGroupBlock:last-child {
+  border-bottom: 0;
+  padding-bottom: 0;
+}
+
+.investGroupLeft {
+  height: 104rpx;
+  width: 104rpx;
+  background: blueviolet;
+  margin-right: 24rpx;
+}
+
+.investTitle {
+  font-size: 30rpx;
+  color: #333;
+  line-height: 32rpx;
+  text-align: left;
+}
+
+.investNum {
+  font-size: 24rpx;
+  color: #fc703e;
+  line-height: 26rpx;
+  text-align: right;
+}
+
+.investTitleBlock {
+  margin-bottom: 20rpx;
+  justify-content: space-between;
+}
+
+.investIntro {
+  font-size: 24rpx;
+  color: #999;
+  line-height: 24rpx;
+  text-align: left;
+  margin-bottom: 28rpx;
+  width: 550rpx;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.mainCase {
+  border: 1rpx solid rgba(0, 158, 255, 0.20);
+  border-radius: 4rpx;
+  width: 56rpx;
+  height: 28rpx;
+  font-size: 20rpx;
+  line-height: 32rpx;
+  color: #009eff;
+  text-align: center;
+  margin-right: 13rpx;
+}
+
+.mainCaseContent {
+  font-size: 24rpx;
+  color: #666;
+  line-height: 36rpx;
+  text-align: left;
+  overflow: hidden;
+  text-overflow: -o-ellipsis-lastline;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  width: 480rpx;
+}
+
+.investTime {
+  background: #fafafa;
+  border-radius: 4rpx;
+  width: 510rpx;
+  height: 56rpx;
+  padding: 24rpx;
+  font-size: 24rpx;
+  color: #40587a;
+  text-align: left;
+  word-break: break-all;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
 }
