--- a/Weitianshi/utils/wxss/searchModel.wxss
+++ b/Weitianshi/utils/wxss/searchModel.wxss
@@ -114,11 +114,9 @@
   height: 112rpx;
   background: #f3f4f8;
 }
-
 #searchModel2 .scroll{
-  width: 700rpx;
+  width: 640rpx;
 }
-
 #searchModel2 .label {
   padding: 12rpx;
   background: rgba(0, 158, 255, 0.10);
@@ -129,8 +127,13 @@
   margin: 0 16rpx;
   margin-top: 32rpx;
   height: 28rpx;
-  min-width: 100rpx;
 }
 #searchModel2 .label image{
   margin-left: 14rpx;
+}
+#searchModel2 .allReset{
+  font-size: 24rpx;
+  color:#009eff;
+  line-height: 112rpx;
+  margin-right: 32rpx;
 }
